# amplifier-module-provider-claude

./: .gitignore  README.md  bundle.yaml  pyproject.toml
.beads/: issues.jsonl
amplifier_module_provider_anthropic/: __init__.py
amplifier_module_provider_claude/: __init__.py
amplifier_module_provider_claude/sessions/: __init__.py  manager.py  models.py
behaviors/: bundle-claude.yaml  claude-with-tools-reminder.yaml  tools-reminder.yaml
docs/: ARCHITECTURE.md  FEATURE_COVERAGE.md
tests/: test_behavioral.py  test_developer_messages.py  test_image_support.py  test_integration.py  test_large_system_prompt.py  test_message_tracking.py  test_streaming_events.py  test_tool_parsing.py  test_tool_repair.py  test_tool_result_validation.py  test_validation.py
