[project]
name = "amplifier-module-provider-claude"
version = "1.0.0"
description = "Reference provider module - Claude integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    # Claude Code CLI must be installed: curl -fsSL https://claude.ai/install.sh | bash
    # Hook for tool format reminders (handled by orchestrator, not within this module)
    "amplifier-module-hooks-tools-reminder",
]

[project.entry-points."amplifier.modules"]
provider-claude = "amplifier_module_provider_claude:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-module-hooks-tools-reminder = { git = "https://github.com/gszep/amplifier-module-hooks-tools-reminder", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_claude",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

