[project]
name = "amplifier-module-provider-claude"
version = "1.0.0"
description = "Reference provider module - Claude integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Grisha Szep" },
]
dependencies = [
    "claude-agent-sdk",
]

[project.entry-points."amplifier.modules"]
provider-claude = "amplifier_module_provider_claude:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true


[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_claude",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }